wwwroot files added

--- a/Applied Sciences Research Center Website/Applied Sciences Research Center Website.csproj
+++ b/Applied Sciences Research Center Website/Applied Sciences Research Center Website.csproj
@@ -7,4 +7,9 @@
     <RootNamespace>Applied_Sciences_Research_Center_Website</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\css\" />
+    <Folder Include="wwwroot\js\" />
+  </ItemGroup>
+
 </Project>
