--- a/Applied Sciences Research Center Website/Applied Sciences Research Center Website.csproj
+++ b/Applied Sciences Research Center Website/Applied Sciences Research Center Website.csproj
@@ -12,4 +12,8 @@
     <Folder Include="wwwroot\js\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
+  </ItemGroup>
+
 </Project>
