Auth part complete
- Mongodb setup
- Jwt Tokenization added
- Add + update + delete user added
- Models + Controllers + services added

--- a/Applied Sciences Research Center Website/appsettings.json
+++ b/Applied Sciences Research Center Website/appsettings.json
@@ -5,5 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Auth": {
+    "JwtSecretKey": "Applied_Sciences_Research_Center_Website.CrossStacks.pk",
+    "JwtIssuer": "CrossStacks",
+    "JwtAudience": "Dr.Najia",
+    "PasswordHashSalt": "PasswordHashSalt",
+    "PasswordHashPepper": "PasswordHashPepper"
+  },
+  "DataBase": {
+    "ConnectionString": "mongodb+srv://root:root@cluster0.z9rsu.mongodb.net/",
+    "DataBase": "ASRC_SPST"
+  },
   "AllowedHosts": "*"
 }
