--- a/asrc_flutter/pubspec.yaml
+++ b/asrc_flutter/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_image_slideshow: ^0.1.6
   http: ^1.3.0
   flutter_svg: ^2.0.17
+  fluttertoast: ^8.2.12
 
 dev_dependencies:
   flutter_test:
