--- a/asrc_flutter/pubspec.yaml
+++ b/asrc_flutter/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_svg: ^2.0.17
   fluttertoast: ^8.2.12
   dotted_line: ^3.2.3
+  flutter_inappwebview: ^6.1.5
 
 dev_dependencies:
   flutter_test:
