--- a/asrc_flutter/pubspec.yaml
+++ b/asrc_flutter/pubspec.yaml
@@ -39,7 +39,8 @@ dependencies:
   flutter_svg: ^2.0.17
   fluttertoast: ^8.2.12
   dotted_line: ^3.2.3
-  flutter_inappwebview: ^6.1.5
+  fwfh_webview: ^0.15.4
+  flutter_widget_from_html_core: ^0.16.0
 
 dev_dependencies:
   flutter_test:
