added modify / add event page

--- a/asrc_flutter/pubspec.yaml
+++ b/asrc_flutter/pubspec.yaml
@@ -71,6 +71,7 @@ flutter:
     - assets/logo3.jpg
     - assets/najiyaalarifazoo.jpg
     - assets/linkedin.svg
+    - assets/twitter-x.svg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
