--- a/asrc_flutter/pubspec.yaml
+++ b/asrc_flutter/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   fwfh_webview: ^0.15.4
   flutter_widget_from_html_core: ^0.16.0
   url_launcher: ^6.3.1
+  dotted_border: ^2.1.0
 
 dev_dependencies:
   flutter_test:
