--- a/asrc_flutter/pubspec.yaml
+++ b/asrc_flutter/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_widget_from_html_core: ^0.16.0
   url_launcher: ^6.3.1
   dotted_border: ^2.1.0
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
