--- a/asrc_flutter/pubspec.yaml
+++ b/asrc_flutter/pubspec.yaml
@@ -44,6 +44,10 @@ dependencies:
   url_launcher: ^6.3.1
   dotted_border: ^2.1.0
   image_picker: ^1.1.2
+  firebase_core: ^3.12.1
+  firebase_auth: ^5.5.1
+  cloud_firestore: ^5.6.5
+  firebase_storage: ^12.4.4
 
 dev_dependencies:
   flutter_test:
