--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -14,8 +14,8 @@ jobs:
       - uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.29.1'
-      - run: flutter pub get
-      - run: flutter build web
+      - run: cd asrc_flutter && flutter pub get
+      - run: cd asrc_flutter && flutter build web
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
@@ -23,3 +23,4 @@ jobs:
             secrets.FIREBASE_SERVICE_ACCOUNT_APPLIED_SCIENCES_RESEARHCENTER }}
           channelId: live
           projectId: applied-sciences-researhcenter
+          entryPoint: asrc_flutter
