--- a/asrc_flutter/pubspec.yaml
+++ b/asrc_flutter/pubspec.yaml
@@ -78,7 +78,7 @@ flutter:
     - assets/najiyaalarifazoo.jpg
     - assets/linkedin.svg
     - assets/twitter-x.svg
-    - assets/person_icon.png
+    - assets/person_icon.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
