Publication part complete.
TODO: update SQL Query. Do not get ids bro

--- a/asrc_asp/appsettings.json
+++ b/asrc_asp/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnectionString": "server=localhost;port=3306;Database=ojs;User=root;Password="
+  },
   "AllowedHosts": "*"
 }
